# goodreads-quotes

./: .gitignore  .mergify.yml  .versio.yaml  Cargo.toml  Makefile  README.md
.github/: dependabot.yml  merge-when-green.yml
.github/workflows/: autofmt.yml  automerge.yml  autoupdate.yaml  build-releases.yml  release.yml  test-and-tag.yml  tests.yml  update-tap.yml
homebrew/: formula.rb.j2
src/: main.rs
tests/: e2e_basic.rs
