[package]
name = "goodreads-quotes"
version = "0.86.3"
authors = [ "Billie Thompson <billie@billiecodes.com>" ]
edition = "2018"
description = "Pull random quotes from goodreads"
keywords = [ "goodreads" ]
categories = [ "command-line-utilities" ]
repository = "https://github.com/PurpleBooth/goodreads-quotes"
readme = "README.md"
license = "Creative Commons Zero v1.0 Universal"

[dependencies]
scraper = "0.12.0"
rand = "0.7.3"
static-http-cache = "0.2.0"
directories-next = "1.0.1"
clap = "~2.33"

  [dependencies.reqwest]
  version = "0.10"
  features = [ "blocking", "json" ]

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "3.1.0"
